# my-portfolio

./: README.md  README_HERO_COMPLETE.md
frontend/: ABOUT_REDESIGN.md  CUSTOMIZATION_EXAMPLES.md  HERO_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/projects/: projects.css
frontend/app/projects/[slug]/: page.tsx
frontend/components/: AboutSection.tsx  ContactForm.tsx  Navigation.tsx
frontend/components/hero/: DataStreams.tsx  GridOverlay.tsx  NeuralNetwork.tsx  ParticleSystem.tsx  PremiumHero.tsx  README.md  TypingEffect.tsx
frontend/components/ui/: Button.tsx  CardGlow.tsx  Skeleton.tsx
frontend/features/projects/components/: FilterPills.tsx  ProjectCard.tsx  ProjectCardSkeleton.tsx  ProjectDetailPage.tsx  ProjectsGrid.tsx  ProjectsSection.tsx
frontend/features/projects/hooks/: use-project-filters.ts  use-projects-query.ts
frontend/lib/: api.ts  query-keys.ts
frontend/lib/services/: projects.ts
frontend/types/: project.ts
portfolio/: .env.example  .gitignore  commands.py  db.sqlite3  pyproject.toml
portfolio/core/: admin.py  models.py  urls.py  views.py
portfolio/core/migrations/: 0001_initial.py
portfolio/portfolio/: settings.py  urls.py
portfolio/project/: admin.py  constants.py  models.py  querysets.py  serializers.py  services.py  urls.py  validators.py  views.py
portfolio/project/migrations/: 0001_project_domain.py
portfolio/project/tests/: __init__.py  test_models.py  test_services.py  test_views.py
